fixed byte test coverage in reference mappings, modified boolean converter logic, updated fieldType reader support